BJ-533 Use msgpack value for bin data id

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,6 @@
         <version>1.0.0</version>
     </parent>
 
-    <groupId>com.rbkmoney</groupId>
     <artifactId>binbase-proto</artifactId>
     <version>SNAPSHOT</version>
     <packaging>jar</packaging>
@@ -28,6 +27,11 @@
             <artifactId>woody-thrift</artifactId>
             <version>LATEST</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.rbkmoney</groupId>
+            <artifactId>damsel</artifactId>
+            <version>1.322-2044908</version>
         </dependency>
     </dependencies>
 
