--- a/pom.xml
+++ b/pom.xml
@@ -30,8 +30,8 @@
         </dependency>
         <dependency>
             <groupId>com.rbkmoney</groupId>
-            <artifactId>damsel</artifactId>
-            <version>1.322-2044908</version>
+            <artifactId>msgpack-proto</artifactId>
+            <version>1.3-b558b0d</version>
         </dependency>
     </dependencies>
 
