added msgpack as dep

--- a/rebar.config
+++ b/rebar.config
@@ -25,6 +25,10 @@
     warn_missing_spec_all
 ]}.
 
+{deps, [
+    {msgpack_proto, {git, "https://github.com/valitydev/msgpack-proto.git", {branch, "master"}}}
+]}.
+
 %% XRef checks
 {xref_checks, [
     undefined_function_calls,
@@ -62,5 +66,5 @@
 
 {thrift_compiler_opts, [
     {in_dir, "proto"},
-    {gen, "erlang:app_prefix=binbase,scoped_typenames"}
+    {gen, "erlang:app_namespaces"}
 ]}.
