--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
+/_build/
+*~
+.tags*
+*.sublime-workspace
+.DS_Store
 .idea
-
+*~
+\#*
+.\#*
+.tags*
+rebar3.crashdump
+include/*.hrl
+src/*.erl
+*.iml
