--- a/rebar.config
+++ b/rebar.config
@@ -25,6 +25,10 @@
     warn_missing_spec_all
 ]}.
 
+{deps, [
+    {msgpack_proto, {git, "https://github.com/valitydev/msgpack-proto.git", {branch, "master"}}}
+]}.
+
 %% XRef checks
 {xref_checks, [
     undefined_function_calls,
@@ -50,7 +54,7 @@
 
 {plugins, [
     {rebar3_thrift_compiler,
-        {git, "https://github.com/valitydev/rebar3_thrift_compiler.git", {tag, "0.3.1"}}}
+        {git, "https://github.com/valitydev/rebar3_thrift_compiler.git", {tag, "0.4"}}}
 ]}.
 
 {provider_hooks, [
@@ -62,8 +66,5 @@
 
 {thrift_compiler_opts, [
     {in_dir, "proto"},
-    {in_files, [
-        "binbase.thrift"
-    ]},
-    {gen, "erlang:app_prefix=binbase,scoped_typenames"}
+    {gen, "erlang:app_namespaces"}
 ]}.
